Adicionado mais arquivos html

--- a/contact.html
+++ b/contact.html
@@ -19,11 +19,11 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                  <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Habilidades</a>
+                        <a class="nav-link" href="https://github.com/MarianaMartins01">GitHub</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contact.html">Contato</a>
@@ -33,18 +33,18 @@
         </div>
     </nav>
 
-    <section class="d-flex align-items-center vh-100 vw-100" style="background-image: url('./assets/fundo.png'); background-position: center;">
-        <div class="container text-center text-black align-items-center  position-sticky w-50">
+    <section class="d-flex align-items-center vh-100 vw-100" style="background-image: url('./assets/fundo.png'); background-position: center; background: rgb(113, 43, 160);">
+        <div class="container text-center text-white align-items-center  position-sticky w-50">
         
         <form class="container">
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Nome</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <input type="name" class="form-control" id="exampleInputEmail1">
              
             </div>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="name@example.com">
                 <div id="emailHelp" class="form-text">Nunca compartilhamos isso com ninguém.</div>
             </div>
               <div class="mb-3">
