--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                  <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Habilidades</a>
+                        <a class="nav-link" href="https://github.com/MarianaMartins01">GitHub</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contact.html">Contato</a>
@@ -54,7 +54,7 @@
                     <div class="card-body">
                       <h5 class="card-title">CSS3</h5>
                       <p class="card-text">Projetos feitos somente com HTML5 e CSS3 em ordem cronológica.</p>
-                      <a href="#" class="btn btn-primary">Veja Agora</a>
+                      <a href="./css3.html" class="btn btn-primary" href="./css3.html">Veja Agora</a>
                     </div>
                   </div>
               </div>
@@ -65,7 +65,7 @@
                     <div class="card-body">
                         <h5 class="card-title">HTML5</h5>
                         <p class="card-text">Projetos testes, simples e alguns usados com o Bootstrap.</p>
-                        <a href="#" class="btn btn-primary">Veja Agora</a>
+                        <a href="./html5.html" class="btn btn-primary">Veja Agora</a>
                     </div>
                  </div>
               </div>
@@ -76,7 +76,7 @@
                     <div class="card-body">
                         <h5 class="card-title">JavaScript</h5>
                         <p class="card-text">Projetos como: Sorteador de Números, Conversor de Moedas e Sites animados.</p>
-                        <a href="#" class="btn btn-primary">Veja Agora</a>
+                        <a href="./javascript.html" class="btn btn-primary">Veja Agora</a>
                     </div>
                 </div>
               </div>
